Correctly align title on smaller screens

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -101,6 +101,7 @@
       width: 100%;
       text-align: left;
       padding: 32px;
+      align-items: flex-start;
 
       .github-button {
         margin-top: 40px;
